Fixed icon display

--- a/rhyme/templates/rhyme/partials/modal_filter_base_button.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base_button.html
@@ -7,7 +7,7 @@
         </button>
         <!-- ko if: filterText -->
             <button class="btn btn-sm btn-outline-secondary active" data-bind="click: removeFilters">
-                <i class="far fa-times"></i>
+                <i class="fas fa-times"></i>
             </button>
         <!-- /ko -->
     </div>
