--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -24,8 +24,11 @@
     {% include "rhyme/partials/loading.html" %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class='navbar-brand' href='#'>Rhyme</a>
-            <div class="collapse navbar-collapse">
+            <button class="navbar-toggler m-2" type="button" data-bs-toggle="collapse" data-bs-target="#rhyme-nav" aria-controls="rhyme-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="rhyme-nav">
+                <a class='navbar-brand' href='#'>Rhyme</a>
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href='{% url "index" %}'>
