--- a/kilo/templates/kilo/base.html
+++ b/kilo/templates/kilo/base.html
@@ -12,6 +12,8 @@
 {% endblock style %}
 
 {% block js %}{{ block.super }}
+  <script src="{% static "react/umd/react.production.min.js" %}"></script>
+  <script src="{% static "react-dom/umd/react-dom.production.min.js" %}"></script>
   <script src="{% static "d3/dist/d3.min.js" %}"></script>
   <script src="{% static "c3/c3.min.js" %}"></script>
   <script type="module" src="{% static "kilo/js/babel-prod/app.js" %}"></script>
