--- a/rhyme/templates/rhyme/partials/song_row.html
+++ b/rhyme/templates/rhyme/partials/song_row.html
@@ -1,11 +1,6 @@
 <tr data-bind="attr: {'data-song-id': id }">
-    <td class="icon-cell is-starred" data-bind="reactStar: {
-        id: id,
-        value: starred,
-        activePlaylistName: $root.activePlaylistName(),
-        onClasses: $parent.starOnClasses(),
-        offClasses: $parent.starOffClasses(),
-    }">
+    <td class="icon-cell is-starred">
+        <i data-bind="css: {'fas': starred, 'far': !starred}" class='fa-star'></i>
     </td>
     <td data-bind="visible: track_number, text: track_number + '.'"></td>
     <td class="col-sm-2" data-bind="text: name"></td>
