--- a/kilo/templates/kilo/base.html
+++ b/kilo/templates/kilo/base.html
@@ -12,6 +12,7 @@
 {% endblock style %}
 
 {% block js %}{{ block.super }}
+  <script src="{% static "htmx.org/dist/htmx.min.js" %}"></script>
   <script src="{% static "react/umd/react.production.min.js" %}"></script>
   <script src="{% static "react-dom/umd/react-dom.production.min.js" %}"></script>
   <script src="{% static "d3/dist/d3.min.js" %}"></script>
@@ -20,5 +21,42 @@
 {% endblock js %}
 
 {% block body %}
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
+      <ul class="navbar-nav flex-grow-1">
+        <li class="nav-item">
+          <a class="nav-link active" href="#"
+             hx-get="{% url "frequency" %}"
+             hx-target="#panel"
+          >Kilo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"
+             hx-get="{% url "recent" %}"
+             hx-target="#panel"
+          >Recent</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"
+             hx-get="{% url "pace" %}"
+             hx-target="#panel"
+          >Speed</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"
+             hx-get="{% url "stats" %}"
+             hx-target="#panel"
+          >Achievement</a>
+        </li>
+        <li class="nav-item clickable">
+          <a class="nav-link" href="#"
+             hx-get="{% url "history" %}"
+             hx-target="#panel"
+          >History</a>
+        </li>
+      </ul>
+    </nav>
+    <div id="panel"></div>
+  </div>
   <div class="container-fluid" id="app"></div>
 {% endblock body %}
