--- a/kilo/templates/kilo/base.html
+++ b/kilo/templates/kilo/base.html
@@ -23,13 +23,13 @@
 {% block body %}
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
+      <!-- TODO: show on page load, too -->
+      <a class="navbar-brand" href="#"
+         hx-get="{% url "frequency" %}"
+         hx-target="#graph-options"
+         hx-on:htmx:after-request="c3.generate(JSON.parse(document.getElementById('graph-options').innerHTML))"
+      >Kilo</a>
       <ul class="navbar-nav flex-grow-1">
-        <li class="nav-item">
-          <a class="nav-link active" href="#"
-             hx-get="{% url "frequency" %}"
-             hx-target="#panel"
-          >Kilo</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="#"
              hx-get="{% url "recent" %}"
