Updated nav class

--- a/kilo/templates/kilo/base.html
+++ b/kilo/templates/kilo/base.html
@@ -46,7 +46,7 @@
              hx-target="#panel"
           >Achievement</a>
         </li>
-        <li class="nav-item clickable">
+        <li class="nav-item">
           <a class="nav-link" href="#"
              hx-get="{% url "history" %}"
              hx-target="#panel"
