Added back workout summaries

--- a/kilo/templates/kilo/partials/days_table.html
+++ b/kilo/templates/kilo/partials/days_table.html
@@ -15,7 +15,7 @@
                  <span>
                    {this.activityIcon(workout) <i class="{this.activityIcon(workout)}"></i><!-- TODO: activity icon -->
                    &nbsp;
-                   {{workout.activity}} {{ workout.summary }} <!-- TODO: summary -->
+                   {{workout.activity}} {{ workout.summary }}
                  </span>}
                  <div class="row g-1 mb-1 align-items-center">
                    <div class="col-3">
