--- a/kilo/templates/kilo/base.html
+++ b/kilo/templates/kilo/base.html
@@ -20,9 +20,9 @@
 {% block body %}
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
-      <!-- TODO: show on page load, too -->
       <a class="navbar-brand" href="#"
          hx-get="{% url "frequency" %}"
+         hx-trigger="load"
          hx-target="#graph-options"
          hx-on:htmx:after-request="c3.generate(JSON.parse(document.getElementById('graph-options').innerHTML))"
       >Kilo</a>
