--- a/kilo/templates/kilo/base.html
+++ b/kilo/templates/kilo/base.html
@@ -15,6 +15,7 @@
   <script src="{% static "htmx.org/dist/htmx.min.js" %}"></script>
   <script src="{% static "d3/dist/d3.min.js" %}"></script>
   <script src="{% static "c3/c3.min.js" %}"></script>
+  <script src="{% static "alpinejs/dist/cdn.min.js" %}"></script>
 {% endblock js %}
 
 {% block body %}
