--- a/kilo/templates/kilo/partials/days_table.html
+++ b/kilo/templates/kilo/partials/days_table.html
@@ -1,7 +1,7 @@
 <table class="table table-striped">
   <tbody>
     {% for day in days %}
-      <tr class="row">
+      <tr class="row" x-data="{ editing: false }">
         <td class="col-2">
           {{ day.day_of_week}}, {{ day.month_name }} {{ day.day_of_month }}, {{ day.year }}
           <input type="hidden" name="year" value="{{ day.year }}" />
@@ -12,12 +12,12 @@
           <ul class="list-unstyled">
             {% for workout in day.workouts %}
               <li data-id="{{ workout.id }}">
-                 <span>
+                 <span x-show="!editing">
                    <i class="{{ workout.activity_icon }}"></i>
                    &nbsp;
                    {{workout.activity}} {{ workout.summary }}
                  </span>
-                 <div class="row g-1 mb-1 align-items-center">
+                 <div class="row g-1 mb-1 align-items-center" x-show="editing">
                    <div class="col-3">
                      <select class="form-control" name="activity" value="{{ workout.activity }}">
                        {% for activity in all_activities %}
@@ -45,7 +45,7 @@
                    </div>
                    <div class="col-2">{{ workout.pace|default:"" }}</div>
                  </div>
-                 <div class="row g-1 mb-1">
+                 <div class="row g-1 mb-1" x-show="editing">
                     <div class="col-3"></div>
                     <div class="col-2">
                       <input type="text" class="form-control" name="sets" placeholder="sets"
@@ -63,26 +63,28 @@
                </li>
              {% endfor %}
              <!-- TODO: add workout -->
-             <button type="button" class="btn btn-outline-secondary btn-sm">
+             <button type="button" class="btn btn-outline-secondary btn-sm" x-show="editing">
                <i class="fa fa-plus"></i> Add Workout
              </button>
           </ul>
         </td>
         <td class="col-5">
-          <textarea class="form-control" rows="3" name="notes" placeholder="How was today?">{{ day.notes|default:"" }}</textarea>
-          {{ day.notes|default:"" }}
+          <textarea class="form-control" rows="3" name="notes" placeholder="How was today?"
+            x-show="editing"
+          >{{ day.notes|default:"" }}</textarea>
+          <div x-show="!editing">{{ day.notes|default:"" }}</div>
         </td>
         <td class="col-1">
-          <!-- TODO: templates -->
-          <!--div class="btn-group" role="group">
+          <div class="btn-group" role="group" x-show="editing">
             <button type="button" class="float-end btn btn-outline-success">
               <i class="fa fa-check"></i>
             </button>
-            <button type="button" class="float-end btn btn-outline-danger">
+            <button type="button" class="float-end btn btn-outline-danger" x-on:click="editing = !editing">
               <i class="fa fa-times"></i>
             </button>
           </div>
-          <div class="dropdown dropstart">
+          <!-- TODO: templates (or a duplication workflow) -->
+          <!--div class="dropdown dropstart">
              <button class="btn btn-outline-secondary dropdown-toggle col-12" id="add-workout-dropdown-btn" type="button"
                      data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                Add
@@ -98,11 +100,12 @@
                  <a class="dropdown-item" href="#" onClick={this.editExistingDayEntry}>Blank Day</a>
                </li>
              </ul>
-          </div>
-          <button type="button" class="btn btn-outline-secondary col-12">
-            Edit
-          </button>}
-        </td-->
+          </div-->
+          <button type="button" class="btn btn-outline-secondary col-12"
+            x-show="!editing"
+            x-on:click="editing = !editing"
+          >Edit</button>
+        </td>
       </tr>
     {% endfor %}
   </tbody>
