Extracted day_row.html

--- a/kilo/templates/kilo/partials/days_table.html
+++ b/kilo/templates/kilo/partials/days_table.html
@@ -1,112 +1,7 @@
 <table class="table table-striped">
   <tbody>
     {% for day in days %}
-      <tr class="row" x-data="{ editing: false }">
-        <td class="col-2">
-          {{ day.day_of_week}}, {{ day.month_name }} {{ day.day_of_month }}, {{ day.year }}
-          <input type="hidden" name="year" value="{{ day.year }}" />
-          <input type="hidden" name="month" value="{{ day.month }}" />
-          <input type="hidden" name="day_of_month" value="{{ day.day_of_month }}" />
-        </td>
-        <td class="col-4">
-          <ul class="list-unstyled">
-            {% for workout in day.workouts %}
-              <li data-id="{{ workout.id }}">
-                 <span x-show="!editing">
-                   <i class="{{ workout.activity_icon }}"></i>
-                   &nbsp;
-                   {{workout.activity}} {{ workout.summary }}
-                 </span>
-                 <div class="row g-1 mb-1 align-items-center" x-show="editing">
-                   <div class="col-3">
-                     <select class="form-control" name="activity" value="{{ workout.activity }}">
-                       {% for activity in all_activities %}
-                         <option>{{ activity }}</option>
-                       {% endfor %}
-                     </select>
-                   </div>
-                   <div class="col-2">
-                     <input type="text" class="form-control" name="distance" placeholder="distance" value="{{ workout.distance|default:"" }}" />
-                   </div>
-                   <div class="col-2">
-                     <select class="form-control" name="distance_unit" value="{{ workout.distance_unit }}">
-                       {% for unit in all_distance_units %}
-                         <option>{{ unit }}</option>
-                       {% endfor %}
-                     </select>
-                   </div>
-                   <div class="col-2">
-                     <input type="text" class="form-control" placeholder="time" value="{{ workout.time|default:"" }}" />
-                   </div>
-                   <div class="col-1">
-                     <button type="button" class="btn btn-outline-secondary btn-sm">
-                       <i class="fa fa-times"></i>
-                     </button>
-                   </div>
-                   <div class="col-2">{{ workout.pace|default:"" }}</div>
-                 </div>
-                 <div class="row g-1 mb-1" x-show="editing">
-                    <div class="col-3"></div>
-                    <div class="col-2">
-                      <input type="text" class="form-control" name="sets" placeholder="sets"
-                             value="{{ workout.sets|default:"" }}" />
-                    </div>
-                    <div class="col-2">
-                      <input type="text" class="form-control" name="reps" placeholder="reps"
-                             value="{{ workout.reps|default:"" }}" />
-                    </div>
-                    <div class="col-2">
-                      <input type="text" class="form-control" name="weight" placeholder="weight"
-                             value="{{ workout.weight|default:"" }}" />
-                    </div>
-                 </div>
-               </li>
-             {% endfor %}
-             <!-- TODO: add workout -->
-             <button type="button" class="btn btn-outline-secondary btn-sm" x-show="editing">
-               <i class="fa fa-plus"></i> Add Workout
-             </button>
-          </ul>
-        </td>
-        <td class="col-5">
-          <textarea class="form-control" rows="3" name="notes" placeholder="How was today?"
-            x-show="editing"
-          >{{ day.notes|default:"" }}</textarea>
-          <div x-show="!editing">{{ day.notes|default:"" }}</div>
-        </td>
-        <td class="col-1">
-          <div class="btn-group" role="group" x-show="editing">
-            <button type="button" class="float-end btn btn-outline-success">
-              <i class="fa fa-check"></i>
-            </button>
-            <button type="button" class="float-end btn btn-outline-danger" x-on:click="editing = !editing">
-              <i class="fa fa-times"></i>
-            </button>
-          </div>
-          <!-- TODO: templates (or a duplication workflow) -->
-          <!--div class="dropdown dropstart">
-             <button class="btn btn-outline-secondary dropdown-toggle col-12" id="add-workout-dropdown-btn" type="button"
-                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Add
-             </button>
-             <ul class="dropdown-menu" aria-labelledby="add-workout-dropdown-btn">
-               {this.props.templates.map((template, index) => (<li>
-                 <a class="dropdown-item" onClick={() => this.editDayEntry(template)}>
-                   {template.activity} {template.distance} {template.distance ? template.distance_unit : ""} {template.sets ? `${template.sets} x ${template.reps}` : ""}
-                 </a>
-               </li>))}
-               {!!this.props.templates.length && <div role="separator" class="dropdown-divider"></div>}
-               <li>
-                 <a class="dropdown-item" href="#" onClick={this.editExistingDayEntry}>Blank Day</a>
-               </li>
-             </ul>
-          </div-->
-          <button type="button" class="btn btn-outline-secondary col-12"
-            x-show="!editing"
-            x-on:click="editing = !editing"
-          >Edit</button>
-        </td>
-      </tr>
+      {% include "kilo/partials/day_row.html" %}
     {% endfor %}
   </tbody>
 </table>
